--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <version>2.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>org.note</groupId>
+    <groupId>wjz.note</groupId>
     <artifactId>wjz_note</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -43,6 +43,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.7.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.12.4</version>
         </dependency>
     </dependencies>
     <build>
