--- a/pom.xml
+++ b/pom.xml
@@ -1,62 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- 声明一个 Maven 项目 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <!-- POM 模型版本号 -->
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- 定义了父级 POM 的信息，这里引用了 Spring Boot Starter Parent 的版本 2.4.4 -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <!-- 本项目的 Maven 坐标 -->
     <groupId>wjz.utilproject</groupId>
     <artifactId>utilproject</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!-- 定义项目的属性，包括编码格式和 Java 版本 -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
+
+    <!-- 定义项目的依赖列表 -->
     <dependencies>
+        <!-- Spring Boot Web Starter 依赖，用于构建 Web 应用程序 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!-- Spring Boot Test Starter 依赖，用于测试 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- JSR-380 Bean Validation API 依赖，用于数据校验 -->
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
+
+        <!-- Lombok 依赖，用于简化 Java 代码 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Spring Boot Validation Starter 依赖，用于支持 JSR-380 数据校验 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+
+        <!-- Jedis Redis 客户端依赖，用于操作 Redis -->
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>3.7.1</version>
         </dependency>
+
+        <!-- Jackson Core 依赖，用于 JSON 数据的处理 -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>2.12.4</version>
         </dependency>
     </dependencies>
+
+    <!-- 定义项目的构建信息 -->
     <build>
         <plugins>
+            <!-- Spring Boot 插件，用于打包和运行 Spring Boot 应用程序 -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
