--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,9 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
+  # 数据库配置
+  datasource:
+    url: jdbc:mysql://localhost:3306/vmi-20230404?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&maxReconnects=10
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
