--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,8 @@
             <version>2.12.4</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>5.3.17</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
         <!-- BeanUtils的依赖 -->
